# SpeakSense

./: .dockerignore  .gitignore  API.md  Cargo.toml  Cross.toml  Makefile  README.md  build.rs  docker-compose.yml  dockerfile  dockerfile.cpu  dockerfile.cuda  dockerfile.metal  transcribe_api.md
docs/: README_zh.md  openapi.yaml
examples/: asr_client.rs
proto/: asr.proto
script/: docker-compose-up.sh  download-ggml-model.sh
src/: lib.rs  main.rs
src/asr/: mod.rs  whisper.rs
src/audio/: mod.rs
src/auth/: error.rs  mod.rs  service.rs
src/grpc/: mod.rs  server.rs
src/grpc/handlers/: asr.rs
src/grpc/pb/: asr.rs  mod.rs
src/registry/: etcd.rs  mod.rs  tests.rs
src/schedule/: mod.rs  types.rs
src/schedule/callback/: mod.rs
src/schedule/processors/: transcribe.rs
src/schedule/scheduler/: task_manager.rs  worker.rs
src/storage/: mod.rs
src/storage/key/: key_entity.rs  key_stats_entity.rs  mod.rs  sqlite.rs  tests.rs
src/storage/task/: entity.rs  sqlite.rs  tests.rs
src/utils/: http.rs  logger.rs
src/web/handlers/: asr.rs  auth.rs
